# python-polylith-microservices-example

./: .gitignore  README.md  TUTORIAL_1.md  TUTORIAL_2.md  TUTORIAL_3A.md  TUTORIAL_3B.md  TUTORIAL_4.md  TUTORIAL_5.md  TUTORIAL_6.md  build_projects.sh  pyproject.toml  workspace.toml
bases/mousetrap/api/: README.md  __init__.py  core.py
bases/mousetrap/job_queue/: README.md  __init__.py  core.py
bases/mousetrap/mongo_connection/: README.md  __init__.py  core.py
components/mousetrap/fetch_data/: README.md  __init__.py  core.py
components/mousetrap/process_data/: README.md  __init__.py  core.py
components/mousetrap/run_fetch_worker/: README.md  __init__.py  core.py  start.py
components/mousetrap/run_processing_worker/: README.md  __init__.py  core.py  start.py
components/mousetrap/start_fetch_worker/: README.md  __init__.py  core.py
deploy/: development.yml  local.yml
development/: 01_fake_data.ipynb  02_queue_worker.ipynb  03_queue_worker_refactoring.ipynb  04_data_processing.ipynb  05_database_check.ipynb
projects/api_app/: Dockerfile  pyproject.toml
projects/worker_1/: Dockerfile  pyproject.toml
projects/worker_2/: Dockerfile  pyproject.toml
test/bases/mousetrap/api/: test_core.py
test/bases/mousetrap/fetch_worker/: test_core.py
test/bases/mousetrap/job_queue/: test_core.py
test/bases/mousetrap/mongo_connection/: test_core.py
test/components/mousetrap/fetch_data/: test_core.py
test/components/mousetrap/process_data/: test_core.py
test/components/mousetrap/run_fetch_worker/: test_core.py
test/components/mousetrap/run_processing_worker/: test_core.py
test/components/mousetrap/start_fetch_worker/: test_core.py
