[tool.poetry]
name = "api_app"
version = "0.1.0"
description = "A simple API app"
authors = ['Matt Gosden <mdgosden@gmail.com>']
license = ""

packages = [
    {include = "mousetrap/job_queue", from = "../../bases"},
    {include = "mousetrap/mongo_connection", from = "../../bases"},
    {include = "mousetrap/api", from = "../../bases"},
    {include = "mousetrap/start_fetch_worker", from = "../../components"},
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
pika = "^1.3.1"
pymongo = "^4.3.3"
uvicorn = "^0.20.0"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
