[tool.poetry]
name = "worker_2"
version = "0.1.0"
description = "A worker that processes data"
authors = ['Matt Gosden <mdgosden@gmail.com>']
license = ""

packages = [
    {include = "mousetrap/job_queue", from = "../../bases"},
    {include = "mousetrap/mongo_connection", from = "../../bases"},
    {include = "mousetrap/process_data", from = "../../components"},
    {include = "mousetrap/run_processing_worker", from = "../../components"},
]

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.1"
pymongo = "^4.3.3"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
